    using System.Collections;
    using System.Collections.Generic;
    using UnityEngine;

    public class TouchingDirections : MonoBehaviour
    {
        public ContactFilter2D castFilter;
        public float groundDistance = 0.05f;
        public float wallDistance = 0.02f;
        public float ceilingDistance = 0.05f;

        CapsuleCollider2D touchingCol;
        Animator animator;
        Transform playerTransform; // ✅ reference the parent transform

        RaycastHit2D[] groundHits = new RaycastHit2D[5];
        RaycastHit2D[] wallHits = new RaycastHit2D[5];
        RaycastHit2D[] ceilingHits = new RaycastHit2D[5];

        [SerializeField] private bool _isGrounded;
        [SerializeField] private bool _isOnWall;
        [SerializeField] private bool _isOnCeiling;

        public bool IsGrounded
        {
            get => _isGrounded;
            private set
            {
                _isGrounded = value;
                animator.SetBool(AnimationStrings.isGrounded, value);
            }
        }

        public bool IsOnWall
        {
            get => _isOnWall;
            private set
            {
                _isOnWall = value;
                animator.SetBool(AnimationStrings.isOnWall, value);
            }
        }

        public bool IsOnCeiling
        {
            get => _isOnCeiling;
            private set
            {
                _isOnCeiling = value;
                animator.SetBool(AnimationStrings.isOnCeiling, value);
            }
        }

        // ✅ Now safe: always checks parent transform
        private Vector2 WallCheckDirection =>
            playerTransform.localScale.x > 0 ? Vector2.right : Vector2.left;

        private void Awake()
        {
            touchingCol = GetComponentInParent<CapsuleCollider2D>();
            animator = GetComponentInParent<Animator>();
            playerTransform = GetComponentInParent<Transform>(); // store player root
        }

        void FixedUpdate()
        {
            IsGrounded = touchingCol.Cast(Vector2.down, castFilter, groundHits, groundDistance) > 0;
            IsOnWall = touchingCol.Cast(WallCheckDirection, castFilter, wallHits, wallDistance) > 0;
            IsOnCeiling = touchingCol.Cast(Vector2.up, castFilter, ceilingHits, ceilingDistance) > 0;
        }
    }
